some files so far for this approach. not as nice as the fieldLayout javascript approach but that's a nightmare to work out.

--- a/src/templates/_components/fields/Conditional_input.twig
+++ b/src/templates/_components/fields/Conditional_input.twig
@@ -16,8 +16,8 @@
 {% import "_includes/forms" as forms %}
 
 {{ forms.textField({
-        label: 'Some Field',
-        instructions: 'Enter some text here.',
+        label: 'Conditional Field',
+        instructions: 'What\'s even going on?',
         id: name,
         name: name,
         value: value})
