fix bug with toggles.

--- a/src/templates/_components/fields/Conditional_input.twig
+++ b/src/templates/_components/fields/Conditional_input.twig
@@ -1,1 +1,3 @@
+{# For some reason we need a line here or the assets on't get included properly! #}
+
 {% do view.registerAssetBundle("billythekid\\conditionalfields\\assetbundles\\conditionalfield\\ConditionalFieldAsset") %}
